1ero Commit: Ya se había creado la api antes de enviar al github aspi que este sería el segundo commit, que crea la aplicación maui con el mvvm, primero se creo la vista para el login, despues la carpeta viewmodels con el LoginPageViewModel.

--- a/AirsoftMVVM/AirsoftMVVM.csproj
+++ b/AirsoftMVVM/AirsoftMVVM.csproj
@@ -49,7 +49,20 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\candado.jpg" />
+	  <None Remove="Resources\Images\usuario.jpg" />
+	  <None Remove="Resources\Images\usuariologo.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
