--- a/AirsfotAPI/appsettings.json
+++ b/AirsfotAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Alex-PC\\SQLEXPRESS; Database=AirsoftApi; Trusted_Connection=True; Trust Server Certificate=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=AirsoftApi; Trusted_Connection=True; MultipleActiveResultSets=true  "
   },
   "Logging": {
     "LogLevel": {
